# full-moon

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  EXPANDED.rs  GRAMMAR.md  LICENSE.md  README.md
benches/: date.lua  date.rs  t.lua  (+1 more)
full-moon/: Cargo.toml  EXPAND.rs  README.md
full-moon-derive/: Cargo.toml
full-moon-derive/src/: derive.rs  lib.rs  node.rs  owned.rs  symbols.rs  visit.rs
full-moon-lua-types/: Cargo.toml
full-moon-lua-types/src/: ast_traits.rs  core.rs  create_ast_node.rs  either.rs  extract_node.rs  lib.rs  lua.rs  mlua_util.rs  prepare_for_lua.rs  shared.rs  visitor.rs
full-moon-lua-types/tests/: lua_tests.rs
full-moon-lua-types/tests/lua/: core.lua  everything.lua
full-moon/fuzz/: Cargo.toml
full-moon/fuzz/fuzz_targets/: parse.rs  parse_parity.rs
full-moon/src/: atom.rs  lib.rs  node.rs  private.rs  rlua.rs  short_string.rs  symbols.rs  tokenizer.rs  tokenizer_luau.rs  util.rs  visitors.rs
full-moon/src/ast/: compound.rs  ifexpr.rs  lua52.rs  lua54.rs  luau.rs  luau_visitors.rs  mod.rs  owned.rs  parser_structs.rs  parser_util.rs  parsers.rs  playdate_lua.rs  pluto.rs  punctuated.rs  span.rs  type_visitors.rs  types.rs  update_positions.rs  versions.rs  visitors.rs
full-moon/src/plugins/: default.rs  mod.rs  never.rs  plugin.rs  tests.rs
full-moon/src/plugins/snapshots/: full_moon__plugins__tests__ast.snap
full-moon/src/tokenizer/: interpolated_strings.rs  lexer.rs  mod.rs  structs.rs
full-moon/tests/: comments_around_functions.rs  derive_node.rs  fail_cases.rs  node.rs  one_line_range.rs  pass_cases.rs  rlua.rs  visitors.rs
full-moon/tests/cases/pass/anonymous-functions-1/: ast.json  ast.snap  tokens.json  tokens.snap  tokens.snap.new
full-moon/tests/cases/pass/anonymous-functions-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/anonymous-functions-3/: ast.json  ast.snap  tokens.snap
full-moon/tests/cases/pass/anonymous-functions-4/: ast.json  ast.snap  tokens.snap
full-moon/tests/cases/pass/assignment-1/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/assignment-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/assignment-3/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/assignment-4/: ast.snap  tokens.snap
full-moon/tests/cases/pass/assignment-5/: ast.snap  tokens.snap
full-moon/tests/cases/pass/binops/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/body-with-spaces/: ast.snap  tokens.snap
full-moon/tests/cases/pass/call-1/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/call-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/do/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/empty/: ast.snap  tokens.snap
full-moon/tests/cases/pass/exponents/: ast.json  ast.snap  source.lua  tokens.json  tokens.snap  tokens.snap.new
full-moon/tests/cases/pass/fractional-numbers/: ast.json  ast.snap  source.lua  tokens.json  tokens.snap  tokens.snap.new
full-moon/tests/cases/pass/function-declaration-1/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/function-declaration-2/: ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/function-shortcuts/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/generic-for-loop-1/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/generic-for-loop-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/goto-as-identifier/: ast.snap  tokens.snap  tokens.snap.new
full-moon/tests/cases/pass/gt-lt/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/if-1/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/if-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/if-3/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/if-4/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/index-1/: ast.json  ast.snap  tokens.snap
full-moon/tests/cases/pass/index-2/: ast.json  ast.snap  tokens.snap
full-moon/tests/cases/pass/local-assignment-1/: ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/local-assignment-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/local-assignment-3/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/local-assignment-4/: ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/local-assignment-5/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/local-function-1/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/local-function-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/mixed-indented-comments/: ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-1/: ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-2/: ast.snap  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-3/: ast.json  ast.snap  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-4/: ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-5/: ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-6/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-7/: ast.snap  tokens.json  tokens.snap  tokens.snap.new
full-moon/tests/cases/pass/multi-line-comments-8/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/multi-line-comments-9/: ast.snap  tokens.snap
full-moon/tests/cases/pass/multi-line-string-1/: ast.json  ast.snap  tokens.snap
full-moon/tests/cases/pass/multi-line-string-2/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/cases/pass/multi-line-string-3/: ast.json  ast.snap  tokens.json  tokens.snap
full-moon/tests/common/: mod.rs
full-moon/tests/rlua/: print.lua  properties.lua  visit.lua
(+1708 files in other folders)
