[package]
name = "full_moon"
version = "0.4.0-rc.12"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
description = "A lossless Lua 5.1 parser"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Kampfkarren/full-moon"
categories = ["parsing"]
keywords = ["lua", "parser", "lua51"]
edition = "2018"

[features]
default = ["serde"]
roblox = []
no-source-tests = []

[dependencies]
atomic_refcell = "0.1"
bytecount = "0.5"
full_moon_derive = { path = "./full-moon-derive", version = "0.4.0" }
generational-arena = "0.2"
itertools = "0.8"
lazy_static = "1.3"
paste = "0.1"
regex = "1.1"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
nom = "5.0.1"

[dev-dependencies]
criterion = "0.2"
pretty_assertions = "0.6.1"
serde_json = "1.0"

[[bench]]
name = "date"
harness = false

[[bench]]
name = "t"
harness = false
