[package]
name = "full-moon-lua-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = { version = "0.16.2", path = "../full-moon" }
full_moon_lua_types_derive = { path = "../full-moon-lua-types-derive" }
mlua = { version = "0.8.3", features = ["luau", "send"] }
paste = "1.0.9"

[features]
luau = ["full_moon/roblox"]
