[package]
name = "full_moon"
version = "0.19.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
description = "A lossless Lua parser"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Kampfkarren/full-moon"
categories = ["parsing"]
keywords = ["lua", "parser", "lua51", "lua52", "luau"]
edition = "2021"

[package.metadata.docs.rs]
# Build Locally: RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --features roblox,lua52,lua53,lua54  --no-deps --open
features = ["roblox", "lua52", "lua53", "lua54"]
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
default = ["serde"]
roblox = []
lua52 = []
lua53 = ["lua52"]
lua54 = ["lua53"]
no-source-tests = []

[dependencies]
bytecount = "0.6"
cfg-if = "1.0"
derive_more = "0.99"
full_moon_derive = { path = "../full-moon-derive", version = "=0.11.0" }
logos = "0.12.1"
paste = "1.0"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
smol_str = { version = "0.2.0", features = ["serde"] }
stacker = { version = "0.1.15", optional = true }

[dev-dependencies]
criterion = "0.5.1"
insta = { version = "1.26.0", features = ["glob", "yaml"] }
pretty_assertions = "1.3.0"

[[bench]]
name = "date"
path = "../benches/date.rs"
harness = false

[[bench]]
name = "t"
path = "../benches/t.rs"
harness = false
