[package]
name = "full_moon_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
old_full_moon = { package = "full_moon", version = "0.18.1", features = [
	"stacker",
] }

[dependencies.full_moon]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false

[[bin]]
name = "parse_parity"
path = "fuzz_targets/parse_parity.rs"
test = false
doc = false
